deploy/kubernetes/4.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: profiler
  name: profiler
  namespace: profiler-system
spec:
  ports:
    - name: ui
      port: 80
      targetPort: 80
    - name: api
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: profiler
