deploy/kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: profiler
  namespace: profiler-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - profiler.jia-huang.com
      tls:
        httpsRedirect: false
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "istio-ingress-cert"
      hosts:
        - profiler.jia-huang.com
